--- a/app/views/stamps/labels/partials/_label_stamp.html.haml
+++ b/app/views/stamps/labels/partials/_label_stamp.html.haml
@@ -13,7 +13,7 @@
       %div.ui.grid
         %div.three.wide.column
           =link_to label_stamp_path(stamp.id) do
-            %h5.ui.middle.aligned.header
+            %h5.ui.mini.blue.tag.label
               = stamp.label.name
         %div.thirteen.wide.column
           %div.bar.float.right
