--- a/app/views/stamps/labels/show.html.haml
+++ b/app/views/stamps/labels/show.html.haml
@@ -11,7 +11,7 @@
     .ui.divider
     %span.ui.grid.centered.middle.aligned
       .three.wide.column
-        %h3= @stamp.label.name
+        %h3.ui.blue.tag.label= @stamp.label.name
       %div.ten.wide.column{style: "padding-top: 30px;"}
         %div.bar.float.right
           %div.ui.purple.progress{style: "background: #FDDCFD;"}
