--- a/app/assets/stylesheets/partials/global.scss
+++ b/app/assets/stylesheets/partials/global.scss
@@ -53,3 +53,11 @@ a.disabled {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
 }
+
+.ui.attached.label {
+  .detail {
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: -0.4em -0.4em -0.4em 0.4em;
+    padding: 0.4em 0.4em;
+  }
+}
