Redesign boosts and activities

--- a/app/views/activities/_domain.create.html.haml
+++ b/app/views/activities/_domain.create.html.haml
@@ -1,3 +1,6 @@
-= time_ago_in_words(activity.updated_at)
-ago added
-= link_to activity.trackable.name, domain_path(activity.trackable.name)
+.content
+  %span.date
+    = time_ago_in_words(activity.updated_at)
+    ago
+  added
+  = link_to activity.trackable.name, domain_path(activity.trackable.name)
