Redesign boosts and activities

--- a/app/views/activities/_app.create.html.haml
+++ b/app/views/activities/_app.create.html.haml
@@ -1,6 +1,6 @@
 .content
   %span.date
-    = time_ago_in_words(activity.updated_at)
+    = time_ago_in_words(activity.created_at)
     ago
   added
   = link_to activity.trackable.name, activity.trackable
