--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -68,10 +68,20 @@
   .eight.wide.column
     %h3
       Boosts
+      - if @user.boosts.exists?
+        Your curent flow (
+        - curent_flow = @user.boosts.where("created_at >= ?", Time.now - 1.month).sum(:reputation).to_i
+        - if curent_flow > 0
+          %span.ui.green.text
+            = "+#{curent_flow}"
+        - else
+          %span.ui.red.text
+            = curent_flow
+        )
     - if @user.boosts.exists?
-      .ui.basic.segments
-        - @user.boosts.order(created_at: :desc).limit(12).each do |boost|
-          .ui.secondary.header.segment
+      .ui.feed
+        - @user.boosts.order(created_at: :desc).limit(10).each do |boost|
+          .event
             = render partial: "boosts/boosts", locals: { boost: boost }
 
     - else
@@ -80,9 +90,9 @@
     %h3
       Activity
     - if @user.activities.exists?
-      .ui.basic.segments
-        - @user.activities.order(created_at: :desc).limit(12).each do |activity|
-          .ui.secondary.header.segment
+      .ui.feed
+        - @user.activities.order(created_at: :desc).limit(10).each do |activity|
+          .event
             = render partial: "activities/#{activity.key}", locals: { activity: activity }
     - else
       Hey maybe do something more for your activities!
