--- a/app/views/activities/_stamp.create.html.haml
+++ b/app/views/activities/_stamp.create.html.haml
@@ -1,16 +1,16 @@
 .content
   %span.date
-    = time_ago_in_words(activity.updated_at)
+    = time_ago_in_words(activity.created_at)
     ago
   created a
   = link_to activity.trackable_type, activity.trackable
-  for
+  of
   - if activity.trackable_type == "Stamp::Label"
-    = link_to activity.trackable.stampable.name, domain_path(activity.recipient.name)
+    = link_to activity.recipient.name, domain_path(activity.recipient.name)
   - elsif activity.trackable_type == "Stamp::Flag"
-    = link_to activity.trackable.stampable.name, app_path(activity.recipient)
+    = link_to activity.recipient.name, app_path(activity.recipient)
   - else
     wtf how does this work
   its
   = activity.trackable.state
-  \.
+  
