Embellish boosts and activities code

--- a/app/views/activities/_domain.create.html.haml
+++ b/app/views/activities/_domain.create.html.haml
@@ -1,6 +1,2 @@
-.content
-  %span.date
-    = time_ago_in_words(activity.created_at)
-    ago
-  added
-  = link_to activity.trackable.name, domain_path(activity.trackable.name)
+added
+= link_to activity.trackable.name, activity.trackable
