Remove 'you' from activity feed

--- a/app/views/activities/_vote.create.html.haml
+++ b/app/views/activities/_vote.create.html.haml
@@ -1,4 +1,4 @@
-you voted for a
+voted for a
 = link_to activity.recipient_type, activity.recipient
 of
 = link_to activity.recipient.stampable.name, activity.recipient.stampable
