Readd a limit activities in user#show

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -81,7 +81,7 @@
       Activity
     - if @user.activities.exists?
       .ui.feed
-        - @user.activities.order(created_at: :desc).each do |activity|
+        - @user.activities.order(created_at: :desc).limit(15).each do |activity|
           .event
             .content
               %span.date
