--- a/app/views/semantic/_header.html.haml
+++ b/app/views/semantic/_header.html.haml
@@ -20,9 +20,17 @@
 
   .right.menu
     - if user_signed_in?
+      = link_to user_path(current_user), class: 'vertically fitted item' do
+        %img{class: 'ui avatar image', src: '/assets/portmaster.png'}
+        = fa_icon 'chess-king', size: '1x'
+        = current_user.voting_power
+        %span
+          ⎮
+        = current_user.reputation
+        rep
       .ui.simple.icon.top.right.dropdown.item
         - if current_user.activities.exists?
-          %i.inbox.green.icon
+          %i.inbox.purple.large.icon
           = current_user.activities.count
           .menu
             - current_user.activities.order(created_at: :desc).limit(10).each do |activity|
@@ -36,13 +44,13 @@
                       .summary
                         = render partial: "activities/#{activity.key}", locals: { activity: activity }
         - else
-          %i.inbox.icon
+          %i.inbox.large.icon
       .ui.simple.icon.top.right.dropdown.item
         - if current_user.boosts.exists?
-          - if current_user.boosts.order(created_at: :desc).limit(10).sum(:reputation).to_i > 0
-            %i.trophy.green.icon
+          - if current_user.boosts.order(created_at: :desc).limit(10).sum(:reputation).to_i >= 0
+            %i.trophy.green.large.icon
           - else
-            %i.trophy.red.icon
+            %i.trophy.red.large.icon
           = current_user.boosts.count
           .menu
             - current_user.boosts.order(created_at: :desc).limit(10).each do |boost|
@@ -51,16 +59,7 @@
                   .event
                     = render partial: "boosts/boosts", locals: { boost: boost }
         - else
-          %i.trophy.icon
-      = link_to user_path(current_user), class: 'item' do
-        %img.small_stamp{src: '/assets/stamp_j3rik0_no_text_icon.png'}
-        = current_user.stamps.count
-        .content
-        %i.fitted.sort.icon
-        = current_user.votes.count
-        .content
-        %i.fitted.linkify.icon
-        = current_user.domains.count
+          %i.trophy.large.icon
       .ui.simple.inverted.dropdown.item
         %i.bars.icon
         .menu
