Move notification to its own partial

--- a/app/views/notifications/_dropdown.html.haml
+++ b/app/views/notifications/_dropdown.html.haml
@@ -6,12 +6,4 @@
     %i.inbox.grey.large.icon
   .menu
     - notifications.limit(10).each do |notification|
-      .item
-        %span.ui.grey.text
-          = time_ago_in_words(notification.created_at)
-          ago
-        %span
-          = render partial: "notifications/#{notification.activity.key}", locals: { notification: notification }
-          = link_to notification.reference_type, notification.reference
-          of
-          = link_to notification.reference.stampable.name, notification.reference.stampable
+      = render partial: 'notifications/notification', locals: { notification: notification }
