Display or hide notification counter via css

--- a/app/assets/stylesheets/partials/layout.scss
+++ b/app/assets/stylesheets/partials/layout.scss
@@ -13,6 +13,18 @@
       padding-right: 4px;
     }
 
+    .ui.dropdown.item {
+      .inbox.icon {
+        &.grey + .counter{
+          display: none;
+        }
+
+        &.purple + .counter {
+          display: block;
+        }
+      }
+    }
+
     .content {
       padding-left: 11px;
     }
