--- a/app/views/notifications/_dropdown.html.haml
+++ b/app/views/notifications/_dropdown.html.haml
@@ -1,6 +1,7 @@
 .ui.simple.top.right.dropdown.item{data: {controller: 'notifications'}}
-  %i.inbox.large.icon{class: notifications.unread.exists? ? 'purple' : 'grey'}
-  %span.counter= notifications.unread.count
+  %i.inbox.large.icon{class: (notifications.unread.exists? ? 'purple' : 'grey'), data: {target: 'notifications.icon'}}
+  %span.counter{data: {target: 'notifications.counter'}}
+    = notifications.unread.count
   .menu{data: {target: 'notifications.menu'}}
     - notifications.limit(10).each do |notification|
       = render partial: 'notifications/notification', locals: { notification: notification }
