--- a/app/views/semantic/_header.html.haml
+++ b/app/views/semantic/_header.html.haml
@@ -29,7 +29,7 @@
         = current_user.reputation
         rep
       = render partial: 'notifications/dropdown'
-      .ui.simple.inverted.dropdown.item
+      .ui.inverted.dropdown.item
         %i.bars.icon
         .menu
           = link_to 'Profile', user_path(current_user), class: 'item'
