Implement #stampable_name for stamps
the thought behind this is to be able to call the same method in the UI for different stamps. Another usecase is activities caching, which does not care about the stamp type, but does want to save the descriptor/stampable_name

--- a/app/views/activities/_vote.create.html.haml
+++ b/app/views/activities/_vote.create.html.haml
@@ -1,6 +1,6 @@
 voted for a
 = link_to activity.recipient_type, activity.recipient
 of
-= link_to activity.recipient.stampable.name, activity.recipient.stampable
+= link_to activity.recipient.stampable_name, activity.recipient.stampable
 its
 = activity.recipient.state
