--- a/app/views/activities/_comment.create.html.haml
+++ b/app/views/activities/_comment.create.html.haml
@@ -1,4 +1,4 @@
 commented on a
 = link_to activity.recipient_type, activity.recipient
 of
-= link_to activity.recipient.stampable.name, activity.recipient.stampable
+= link_to activity.recipient.stampable_name, activity.recipient.stampable
