--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -6,4 +6,4 @@
     = render partial: "notifications/#{notification.activity.key}", locals: { notification: notification }
     = link_to notification.reference_type, notification.reference
     of
-    = link_to notification.reference.stampable.name, notification.reference.stampable
+    = link_to notification.reference.stampable_name, notification.reference.stampable
