--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -40,7 +40,7 @@
         - if policy(@user).update?
           .ui.top.right.attached.circular.label{style: "top: -11px;"}
             = link_to edit_user_path(params[:id]) do
-              %i.pen.alternate.icon
+              %i.pen.alternate.blue.icon
   %div.three.wide.right.floated.column
     %div.ui.basic.segment
       %div.ui.relaxed.list
